--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
       crossorigin="anonymous"
     ></script>
-    <script type="module" src="assets/js/index.js"></script>
+    <script type="module" src="assets/js/main.js"></script>
   </body>
 </html>
